--- a/main-mobile-tttrn.css
+++ b/main-mobile-tttrn.css
@@ -11,21 +11,21 @@
     /*text-shadow: 1px 1px 0px #fff;*/
     background:#571514;
     margin:0px;
-    border:#ccc 1px solid;
+    /*border:#ccc 1px solid;*/
     width: 100%;
-    -moz-border-radius:3px;
-    -webkit-border-radius:3px;
-    border-radius:3px;
+    /*-moz-border-radius:3px;*/
+    /*-webkit-border-radius:3px;*/
+    /*border-radius:3px;*/
     
     /*-moz-box-shadow: 0 1px 2px #d1d1d1;*/
     /*-webkit-box-shadow: 0 1px 2px #d1d1d1;*/
     /*box-shadow: 0 1px 2px #d1d1d1;*/
-    border-collapse: separate;
+    /*border-collapse: separate;*/
 }
 #RTWidgetStatus table th {
     padding:5px 5px 5px 5px;
-    border-top:1px solid #fff;
-    border-bottom:1px solid #e0e0e0;
+    /*border-top:1px solid #fff;*/
+    /*border-bottom:1px solid #e0e0e0;*/
     text-align: center;
     color:#fff;
     
@@ -47,7 +47,7 @@
 #RTWidgetStatus .header_info2{
     padding-left: 10px;
     padding: 3px;
-    font-size: 11px;
+    font-size: 16px;
 }
 
 #RTWidgetStatus table tr:first-child th:first-child {
